--- a/MathCore.WPF.Styles/Styles/TextBoxes/TaggedTextBox.xaml
+++ b/MathCore.WPF.Styles/Styles/TextBoxes/TaggedTextBox.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../../Resources/Brushes/Brushes.xaml"/>
+        <ResourceDictionary Source="../../Resources/Animation/EasingFunctions.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+
     <ControlTemplate x:Key="TaggedTextBoxTemplate" TargetType="TextBox">
         <Grid>
             <Grid.RowDefinitions>
@@ -14,17 +19,23 @@
                                   HorizontalScrollBarVisibility="Hidden" 
                                   VerticalScrollBarVisibility="Hidden"/>
             </Border>
-            <TextBlock Grid.Row="0" Name="Title" Text="{TemplateBinding Tag}"/>
+            <TextBlock Grid.Row="0" Name="Title" Text="{TemplateBinding Tag}">
+                <TextBlock.RenderTransform>
+                    <TranslateTransform x:Name="TitleTransform"/>
+                </TextBlock.RenderTransform>
+            </TextBlock>
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Opacity" Value="0.5"/>
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter TargetName="Border" Property="BorderBrush" Value="LightBlue"/>
+                <Setter TargetName="Border" Property="BorderBrush" 
+                        Value="{StaticResource LightBlueBrush}"/>
             </Trigger>
             <Trigger Property="IsKeyboardFocused" Value="True">
-                <Setter TargetName="Border" Property="BorderBrush" Value="Blue"/>
+                <Setter TargetName="Border" Property="BorderBrush" 
+                        Value="{StaticResource BlueBrush}"/>
             </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
@@ -32,11 +43,39 @@
                     <Condition Property="IsFocused" Value="False"/>
                     <Condition Property="IsMouseOver" Value="False"/>
                 </MultiTrigger.Conditions>
-                <Setter TargetName="Title" Property="RenderTransform">
+                <!--<Setter TargetName="Title" Property="RenderTransform">
                     <Setter.Value>
                         <TranslateTransform X="5" Y="16"/>
                     </Setter.Value>
-                </Setter>
+                </Setter>-->
+                <MultiTrigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="TitleTransform" 
+                                             Storyboard.TargetProperty="X" To="5" 
+                                             Duration="0:0:0.3" 
+                                             EasingFunction="{StaticResource CubicEaseInOut}"/>
+                            <DoubleAnimation Storyboard.TargetName="TitleTransform" 
+                                             Storyboard.TargetProperty="Y" To="16" 
+                                             Duration="0:0:0.3" 
+                                             EasingFunction="{StaticResource CubicEaseInOut}"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </MultiTrigger.EnterActions>
+                <MultiTrigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="TitleTransform" 
+                                             Storyboard.TargetProperty="X" From="5" 
+                                             Duration="0:0:0.3"
+                                             EasingFunction="{StaticResource CubicEaseInOut}"/>
+                            <DoubleAnimation Storyboard.TargetName="TitleTransform" 
+                                             Storyboard.TargetProperty="Y" From="16" 
+                                             Duration="0:0:0.3"
+                                             EasingFunction="{StaticResource CubicEaseInOut}"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </MultiTrigger.ExitActions>
             </MultiTrigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
