--- a/MathCore.WPF.Styles/Resources/Animation/EasingFunctions.xaml
+++ b/MathCore.WPF.Styles/Resources/Animation/EasingFunctions.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:p="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <CubicEase x:Key="CubicEaseInOut" EasingMode="EaseInOut"/>
+    <CubicEase x:Key="CubicEaseInOut" EasingMode="EaseInOut" p:Freeze="True"/>
 
 </ResourceDictionary>
