--- a/MathCore.WPF.Styles/Resources/Brushes/Brushes.xaml
+++ b/MathCore.WPF.Styles/Resources/Brushes/Brushes.xaml
@@ -1,15 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:p="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <SolidColorBrush x:Key="TransparentBrush" Color="Transparent"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="Black"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="White"/>
+    <SolidColorBrush x:Key="TransparentBrush" Color="Transparent" p:Freeze="True"/>
+    <SolidColorBrush x:Key="BlackBrush" Color="Black" p:Freeze="True"/>
+    <SolidColorBrush x:Key="WhiteBrush" Color="White" p:Freeze="True"/>
 
-    <SolidColorBrush x:Key="RedBrush" Color="Red"/>
-    <SolidColorBrush x:Key="GreenBrush" Color="Green"/>
-    <SolidColorBrush x:Key="BlueBrush" Color="Blue"/>
+    <SolidColorBrush x:Key="RedBrush" Color="Red" p:Freeze="True"/>
+    <SolidColorBrush x:Key="GreenBrush" Color="Green" p:Freeze="True"/>
+    <SolidColorBrush x:Key="BlueBrush" Color="Blue" p:Freeze="True"/>
 
-    <SolidColorBrush x:Key="LightBlueBrush" Color="LightBlue"/>
-    <SolidColorBrush x:Key="DarkBlueBrush" Color="DarkBlue"/>
+    <SolidColorBrush x:Key="LightBlueBrush" Color="LightBlue" p:Freeze="True"/>
+    <SolidColorBrush x:Key="DarkBlueBrush" Color="DarkBlue" p:Freeze="True"/>
 
 </ResourceDictionary>
