--- a/Tests/MathCore.WPF.Styles.WPFTests/MainWindow.xaml
+++ b/Tests/MathCore.WPF.Styles.WPFTests/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:l="clr-namespace:MathCore.WPF.Styles.WPFTests"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow"
+        Width="800" Height="450">
     <Grid>
-        <TextBox Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,25" 
-                 Text="" Style="{StaticResource TaggedTextBoxStyle}" Tag="Enter name:"/>
+        <CheckBox HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,25" 
+                  Content="Are you sure?" Style="{StaticResource SwitchingCheckBoxStyle}"/>
         <TextBox VerticalAlignment="Top" Margin="5,70"/>
     </Grid>
 </Window>
